[gd_scene load_steps=8 format=3 uid="uid://d1b7bnitcp3qy"]

[ext_resource type="Script" uid="uid://elokxwmgsl0e" path="res://Scripts/ui.gd" id="1_suuwg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jxero"]
bg_color = Color(0.423651, 0.423651, 0.423651, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="Animation" id="Animation_qdvrb"]
resource_name = "InkEmpty"
length = 2.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/background:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.423651, 0.423651, 0.423651, 1), Color(0.577008, 0.577008, 0.577008, 1), Color(0.423529, 0.423529, 0.423529, 1), Color(0.577008, 0.577008, 0.577008, 1), Color(0.423529, 0.423529, 0.423529, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [false],
"method": &"set_charge"
}, {
"args": [true],
"method": &"set_charge"
}]
}

[sub_resource type="Animation" id="Animation_nf4gj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/background:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.423651, 0.423651, 0.423651, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2246s"]
_data = {
&"InkEmpty": SubResource("Animation_qdvrb"),
&"RESET": SubResource("Animation_nf4gj")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qdvrb"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nf4gj"]
bg_color = Color(0, 0.455508, 0.137784, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_suuwg")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 648.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="InkMeter" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_jxero")
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/MarginContainer/VBoxContainer/InkMeter"]
libraries = {
&"": SubResource("AnimationLibrary_2246s")
}

[node name="ChargeTimer" type="Timer" parent="Control/MarginContainer/VBoxContainer/InkMeter/AnimationPlayer"]
wait_time = 2.5
one_shot = true

[node name="InkLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/InkMeter"]
layout_mode = 0
offset_right = 69.0
offset_bottom = 23.0
text = "  Ink: 100"

[node name="FruitHealthBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 25)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_qdvrb")
theme_override_styles/fill = SubResource("StyleBoxFlat_nf4gj")
value = 100.0
show_percentage = false

[node name="FruitHealthLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/FruitHealthBar"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "  Fruit Health:"

[node name="WaveInfoContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="TimeLeftLabel" type="Label" parent="Control/MarginContainer/WaveInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Time Left In Wave: 0"

[node name="EnemyLeftLabel" type="Label" parent="Control/MarginContainer/WaveInfoContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Enemies Left In Wave: 0"

[connection signal="timeout" from="Control/MarginContainer/VBoxContainer/InkMeter/AnimationPlayer/ChargeTimer" to="." method="_on_charge_timer_timeout"]
